<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/item_margin"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_name"
        style="@style/TitleTextStyle"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_cardView"
        app:layout_constraintStart_toEndOf="@+id/popup_cardView"
        app:layout_constraintTop_toTopOf="@+id/popup_cardView" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup_cardView"
        android:layout_marginEnd="@dimen/default_margin"
        android:src="@drawable/ic_close"/>

    <TextView
        android:id="@+id/popup_plant_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_description_title"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_cardView"
        app:layout_constraintTop_toBottomOf="@+id/popup_cardView"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_plant_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_description_subtitle"
        style="@style/DefaultTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_title" />

    <TextView
        android:id="@+id/popup_plant_grow_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_grow_title"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_subtitle"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_plant_grow_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_grow_subtitle"
        style="@style/DefaultTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_grow_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_title" />

    <TextView
        android:id="@+id/popup_plant_water_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_water_title"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_grow_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_subtitle"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_plant_water_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_water_subtitle"
        style="@style/DefaultTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_water_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_title" />

    <View
        android:id="@+id/popup_view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_subtitle" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@+id/popup_view_separation"
        app:layout_constraintEnd_toStartOf="@+id/popup_view_separation"
        app:layout_constraintTop_toTopOf="@+id/popup_view_separation"
        android:layout_marginEnd="50dp"/>

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@+id/popup_view_separation"
        app:layout_constraintStart_toEndOf="@+id/popup_view_separation"
        app:layout_constraintTop_toTopOf="@+id/popup_view_separation"
        android:layout_marginStart="50dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>